fix margin classes

--- a/gallery.html
+++ b/gallery.html
@@ -1552,51 +1552,51 @@
                 <div class="card card-full card-full-slider">
                   <div class="card-full-slider-wrap card-wrap card-full-wrap">
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-03.jpg)"><img src="img/block-img-03.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-12.jpg)"><img src="img/block-img-12.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-06.jpg)"><img src="img/block-img-06.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-05.jpg)"><img src="img/block-img-05.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-04.jpg)"><img src="img/block-img-04.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-09.jpg)"><img src="img/block-img-09.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-07.jpg)"><img src="img/block-img-07.jpg"></div>
                       </div>
                     </div>
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-03.jpg)"><img src="img/block-img-03.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-12.jpg)"><img src="img/block-img-12.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-06.jpg)"><img src="img/block-img-06.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-05.jpg)"><img src="img/block-img-05.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-04.jpg)"><img src="img/block-img-04.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-09.jpg)"><img src="img/block-img-09.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-07.jpg)"><img src="img/block-img-07.jpg"></div>
                       </div>
                     </div>
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-03.jpg)"><img src="img/block-img-03.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-12.jpg)"><img src="img/block-img-12.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-06.jpg)"><img src="img/block-img-06.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-05.jpg)"><img src="img/block-img-05.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-04.jpg)"><img src="img/block-img-04.jpg"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-09.jpg)"><img src="img/block-img-09.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg"></div>
                         <div class="article-imgbox article-imgbox_third" style="background-image: url(img/block-img-07.jpg)"><img src="img/block-img-07.jpg"></div>
@@ -1632,37 +1632,37 @@
                 <div class="card card-full card-full-slider">
                   <div class="card-full-slider-wrap card-wrap card-full-wrap">
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_sm" style="background-image:url(img/article-img-02.jpg)"><img src="img/article-img-02.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image:url(img/block-img-02.jpg)"><img src="img/block-img-02.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_third card__imgbox_md" style="background-image:url(img/block-img-12.jpg)"><img src="img/block-img-12.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_md" style="background-image:url(img/block-img-03.jpg)"><img src="img/block-img-03.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_sm" style="background-image:url(img/block-img-07.jpg)"><img src="img/block-img-07.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image:url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_third card__imgbox_md" style="background-image:url(img/block-img-06.jpg)"><img src="img/block-img-06.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_md" style="background-image:url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg" alt="image"></div>
                       </div>
                     </div>
                     <div class="card-full-slider__item">
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_sm" style="background-image:url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image:url(img/block-img-02.jpg)"><img src="img/block-img-02.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_third card__imgbox_md" style="background-image:url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_md" style="background-image:url(img/block-img-03.jpg)"><img src="img/block-img-03.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_sm" style="background-image:url(img/block-img-07.jpg)"><img src="img/block-img-07.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_third card__imgbox_sm" style="background-image:url(img/block-img-01.jpg)"><img src="img/block-img-01.jpg" alt="image"></div>
                       </div>
-                      <div class="card__imgwrap card__imgwrap_slim">
+                      <div class="card__imgwrap margin-bottom-15">
                         <div class="card__imgbox card__imgbox_third card__imgbox_md" style="background-image:url(img/block-img-06.jpg)"><img src="img/block-img-06.jpg" alt="image"></div>
                         <div class="card__imgbox card__imgbox_twothird card__imgbox_md" style="background-image:url(img/block-img-10.jpg)"><img src="img/block-img-10.jpg" alt="image"></div>
                       </div>
