--- a/html-old/calendar.html
+++ b/html-old/calendar.html
@@ -1476,7 +1476,7 @@
 
 								<p>Сегодня в комплексе работает около 1200 сотрудников.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
@@ -1499,7 +1499,7 @@
 
 								<p>Однако хоть в ходе термообработки и погибают все полезные биологические культуры, «неживой» йогурт может принести определенную пользу вашему организму, ведь он богат белками, углеводами и жирами, витаминами и минералами.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
@@ -1538,7 +1538,7 @@
 
 								<p>Сегодня в комплексе работает около 1200 сотрудников.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
