--- a/html-old/calendar2.html
+++ b/html-old/calendar2.html
@@ -1419,7 +1419,7 @@
 
 								<p>Сегодня в комплексе работает около 1200 сотрудников.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
@@ -1442,7 +1442,7 @@
 
 								<p>Однако хоть в ходе термообработки и погибают все полезные биологические культуры, «неживой» йогурт может принести определенную пользу вашему организму, ведь он богат белками, углеводами и жирами, витаминами и минералами.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
@@ -1481,7 +1481,7 @@
 
 								<p>Сегодня в комплексе работает около 1200 сотрудников.</p>
 							</div>
-							<div class="article-autor">
+							<div class="article-author">
 								<p>Автор статьи: Елена Мацинова</p>
 							</div>
 						</div>
