--- a/calendar2.html
+++ b/calendar2.html
@@ -999,7 +999,7 @@
                     <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                     <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                   </div>
-                  <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
+                  <div class="article-author"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
                     <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
@@ -1047,7 +1047,7 @@
                     <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                     <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                   </div>
-                  <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
+                  <div class="article-author"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
                     <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
