--- a/post.html
+++ b/post.html
@@ -864,7 +864,7 @@
                       <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                       <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                     </div>
-                    <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
+                    <div class="article-author"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
                       <p>Автор статьи: Елена Мацинова</p>
                     </div>
                   </div>
@@ -1010,9 +1010,9 @@
                 </div>
                 <div class="comment-form-inn colapse show" id="commentFormbox">
                   <div class="comment comment_special">
-                    <div class="article-autor">
-                      <p class="article-autor__left">Оставить комментарий:</p>
-                      <p class="article-autor__username">от Константина Константинопольского</p>
+                    <div class="article-author">
+                      <p class="article-author__left">Оставить комментарий:</p>
+                      <p class="article-author__username">от Константина Константинопольского</p>
                     </div>
                   </div>
                   <div class="comment">
