--- a/gallery.html
+++ b/gallery.html
@@ -1064,7 +1064,7 @@
                     <div class="comment" id="commentator_01">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
-                        <div class="comment__content">
+                        <div class="comment__content padding-all-15">
                           <div class="tagbox comment__tagbox">
                             <div class="tag">
                               <div class="comment__nickname"><span>ЮЛИЯ ШХИЯНЦ</span></div>
@@ -1086,7 +1086,7 @@
                       <div class="comment" id="commentator_02">
                         <div class="comment-box">
                           <div class="comment__avatar" style="background-image: url(img/person-photo-02.jpg)"></div>
-                          <div class="comment__content">
+                          <div class="comment__content padding-all-15">
                             <div class="tagbox comment__tagbox">
                               <div class="tag">
                                 <div class="comment__nickname"><span>ПЕТР ТУШИН</span></div>
@@ -1108,7 +1108,7 @@
                         <div class="comment" id="commentator_03">
                           <div class="comment-box">
                             <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
-                            <div class="comment__content">
+                            <div class="comment__content padding-all-15">
                               <div class="tagbox comment__tagbox">
                                 <div class="tag">
                                   <div class="comment__nickname"><span>СВЕТЛАНА НИКОЛАШИНА</span></div>
@@ -1134,7 +1134,7 @@
                     <div class="comment" id="commentator_04">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-04.jpg)"></div>
-                        <div class="comment__content">
+                        <div class="comment__content padding-all-15">
                           <div class="tagbox comment__tagbox">
                             <div class="tag">
                               <div class="comment__nickname"><span>ДМИТРИЙ ЧЕРНЫШЕВ</span></div>
@@ -1157,7 +1157,7 @@
                     <div class="comment" id="commentator_05">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
-                        <div class="comment__content">
+                        <div class="comment__content padding-all-15">
                           <div class="tagbox comment__tagbox">
                             <div class="tag">
                               <div class="comment__nickname"><span>ЕЛЕНА МАЦИНОВА</span></div>
@@ -1245,7 +1245,7 @@
                       <div class="comment" id="commentator_01">
                         <div class="comment-box">
                           <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
-                          <div class="comment__content">
+                          <div class="comment__content padding-all-15">
                             <div class="tagbox comment__tagbox">
                               <div class="tag">
                                 <div class="comment__nickname"><span>ЮЛИЯ ШХИЯНЦ</span></div>
@@ -1267,7 +1267,7 @@
                         <div class="comment" id="commentator_02">
                           <div class="comment-box">
                             <div class="comment__avatar" style="background-image: url(img/person-photo-02.jpg)"></div>
-                            <div class="comment__content">
+                            <div class="comment__content padding-all-15">
                               <div class="tagbox comment__tagbox">
                                 <div class="tag">
                                   <div class="comment__nickname"><span>ПЕТР ТУШИН</span></div>
@@ -1289,7 +1289,7 @@
                           <div class="comment" id="commentator_03">
                             <div class="comment-box">
                               <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
-                              <div class="comment__content">
+                              <div class="comment__content padding-all-15">
                                 <div class="tagbox comment__tagbox">
                                   <div class="tag">
                                     <div class="comment__nickname"><span>СВЕТЛАНА НИКОЛАШИНА</span></div>
@@ -1315,7 +1315,7 @@
                       <div class="comment" id="commentator_04">
                         <div class="comment-box">
                           <div class="comment__avatar" style="background-image: url(img/person-photo-04.jpg)"></div>
-                          <div class="comment__content">
+                          <div class="comment__content padding-all-15">
                             <div class="tagbox comment__tagbox">
                               <div class="tag">
                                 <div class="comment__nickname"><span>ДМИТРИЙ ЧЕРНЫШЕВ</span></div>
@@ -1338,7 +1338,7 @@
                       <div class="comment" id="commentator_05">
                         <div class="comment-box">
                           <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
-                          <div class="comment__content">
+                          <div class="comment__content padding-all-15">
                             <div class="tagbox comment__tagbox">
                               <div class="tag">
                                 <div class="comment__nickname"><span>ЕЛЕНА МАЦИНОВА</span></div>
