--- a/post.html
+++ b/post.html
@@ -895,7 +895,7 @@
                 <div class="comment" id="commentator_01">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
-                    <div class="comment__content">
+                    <div class="comment__content padding-all-15 padding-all-15">
                       <div class="tagbox comment__tagbox">
                         <div class="tag">
                           <div class="comment__nickname"><span>ЮЛИЯ ШХИЯНЦ</span></div>
@@ -917,7 +917,7 @@
                   <div class="comment" id="commentator_02">
                     <div class="comment-box">
                       <div class="comment__avatar" style="background-image: url(img/person-photo-02.jpg)"></div>
-                      <div class="comment__content">
+                      <div class="comment__content padding-all-15">
                         <div class="tagbox comment__tagbox">
                           <div class="tag">
                             <div class="comment__nickname"><span>ПЕТР ТУШИН</span></div>
@@ -939,7 +939,7 @@
                     <div class="comment" id="commentator_03">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
-                        <div class="comment__content">
+                        <div class="comment__content padding-all-15">
                           <div class="tagbox comment__tagbox">
                             <div class="tag">
                               <div class="comment__nickname"><span>СВЕТЛАНА НИКОЛАШИНА</span></div>
@@ -965,7 +965,7 @@
                 <div class="comment" id="commentator_04">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-04.jpg)"></div>
-                    <div class="comment__content">
+                    <div class="comment__content padding-all-15">
                       <div class="tagbox comment__tagbox">
                         <div class="tag">
                           <div class="comment__nickname"><span>ДМИТРИЙ ЧЕРНЫШЕВ</span></div>
@@ -988,7 +988,7 @@
                 <div class="comment" id="commentator_05">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
-                    <div class="comment__content">
+                    <div class="comment__content padding-all-15">
                       <div class="tagbox comment__tagbox">
                         <div class="tag">
                           <div class="comment__nickname"><span>ЕЛЕНА МАЦИНОВА</span></div>
